generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
}

// ==========================================================
// ⚙️ ENUMERATIONS (DATA VALIDATION)
// ==========================================================
enum Role {
  CANDIDATE
  RECRUITER
  ADMIN
}

enum JobStatus {
  OPEN
  CLOSED
}

enum ApplicationStatus {
  NEW
  INTERVIEW
  IN_PROGRESS
  REJECTED
}

enum QuizStatus {
  PENDING
  VALIDATED
  REJECTED
}

enum CandidateStatus {
  AVAILABLE
  EMPLOYED
}

// ==========================================================
// 🟦 MYSQL DATABASE (RELATIONAL CORE)
// ==========================================================
model User {
  id            String     @id @default(uuid())
  name          String
  email         String     @unique
  emailVerified Boolean    @default(false)
  image         String?
  role          Role       @default(CANDIDATE)
  isOnboarded   Boolean    @default(false)
  createdAt     DateTime   @default(now())
  updatedAt     DateTime   @updatedAt
  sessions      Session[]
  accounts      Account[]
  candidate     Candidate?
  recruiter     Recruiter?

  @@map("user")
}

model Session {
  id        String   @id @default(uuid())
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("session")
}

model Account {
  id                    String    @id @default(uuid())
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?   @db.Text
  refreshToken          String?   @db.Text
  idToken               String?   @db.Text
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@map("account")
}

model Verification {
  id         String   @id @default(uuid())
  identifier String   @db.Text
  value      String   @db.Text
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@map("verification")
}

model Candidate {
  id                 String          @id @default(uuid())
  userId             String          @unique
  user               User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  title              String
  bio                String?         @db.Text
  phone              String?
  location           String?
  experience         String?         @db.Text
  status             CandidateStatus @default(AVAILABLE)
  employabilityScore Int             @default(0)
  githubUrl          String?
  linkedinUrl        String?
  portfolioUrl       String?
  cvPath             String?
  applications       Application[]
  skills             Skill[]         @relation("CandidateSkills")
  testResults        TestResult[]

  @@map("candidate")
}

enum DropdownType {
  CONTRACT_TYPE
  LOCATION
  EXPERIENCE_LEVEL
}

model Recruiter {
  id               String     @id @default(uuid())
  userId           String     @unique
  user             User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  companyName      String?
  website          String?
  industry         String?
  teamSize         String?
  headquarters     String?
  description      String?    @db.Text
  logo             String?    @db.LongText
  contractTypes    String?    @db.LongText
  locations        String?    @db.LongText
  experienceLevels String?    @db.LongText
  jobOffers        JobOffer[]
  dropdownLists    DropdownList[]

  @@map("recruiter")
}

model DropdownList {
  id           String       @id @default(uuid())
  recruiterId  String
  recruiter    Recruiter    @relation(fields: [recruiterId], references: [id], onDelete: Cascade)
  type         DropdownType
  value        String
  createdAt    DateTime     @default(now())

  @@unique([recruiterId, type, value])
  @@map("dropdown_list")
}

model JobOffer {
  id              String        @id @default(uuid())
  recruiterId     String
  recruiter       Recruiter     @relation(fields: [recruiterId], references: [id], onDelete: Cascade)
  title           String
  description     String        @db.Text
  contractType    String
  locationType    String
  salary          String?
  experienceYears Int
  location        String?
  status          JobStatus     @default(OPEN)
  createdAt       DateTime      @default(now())
  applications    Application[]
  skills          Skill[]       @relation("JobOfferSkills")
  quiz            Quiz?

  @@map("job_offer")
}

model Skill {
  id         String      @id @default(uuid())
  name       String      @unique
  candidates Candidate[] @relation("CandidateSkills")
  jobOffers  JobOffer[]  @relation("JobOfferSkills")

  @@map("skill")
}

model Application {
  id               String            @id @default(uuid())
  candidateId      String
  candidate        Candidate         @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  jobOfferId       String
  jobOffer         JobOffer          @relation(fields: [jobOfferId], references: [id], onDelete: Cascade)
  status           ApplicationStatus @default(NEW)
  matchScore       Int
  matchExplanation String?           @db.Text
  appliedDate      DateTime          @default(now())

  @@map("application")
}

model Quiz {
  id          String       @id @default(uuid())
  jobOfferId  String       @unique
  jobOffer    JobOffer     @relation(fields: [jobOfferId], references: [id], onDelete: Cascade)
  title       String
  skillTarget String
  status      QuizStatus   @default(PENDING)
  duration    Int          @default(30)
  deadline    DateTime?
  createdAt   DateTime     @default(now())
  questions   Question[]
  testResults TestResult[]

  @@map("quiz")
}

model Question {
  id            String @id @default(uuid())
  quizId        String
  quiz          Quiz   @relation(fields: [quizId], references: [id], onDelete: Cascade)
  text          String @db.Text
  options       Json
  correctAnswer Int

  @@map("question")
}

model TestResult {
  id          String    @id @default(uuid())
  candidateId String
  candidate   Candidate @relation(fields: [candidateId], references: [id], onDelete: Cascade)
  quizId      String
  quiz        Quiz      @relation(fields: [quizId], references: [id], onDelete: Cascade)
  score       Int
  passed      Boolean
  completedAt DateTime  @default(now())

  @@map("test_result")
}