classDiagram
    direction TB

    %% ==========================================================
    %% ⚙️ SECTION 1: ENUMERATIONS (DATA VALIDATION)
    %% ==========================================================
    class Role {
        <<enumeration>>
        CANDIDATE
        RECRUITER
        ADMIN
    }

    class JobStatus {
        <<enumeration>>
        OPEN
        CLOSED
    }

    class ApplicationStatus {
        <<enumeration>>
        NEW
        INTERVIEW
        IN_PROGRESS
        REJECTED
    }

    class QuizStatus {
        <<enumeration>>
        PENDING
        VALIDATED
        REJECTED
    }

    class CandidateStatus {
        <<enumeration>>
        AVAILABLE
        EMPLOYED
    }

    %% ==========================================================
    %% 🟦 SECTION 2: MYSQL DATABASE (RELATIONAL CORE)
    %% ==========================================================
    class User {
        +String id
        +String name
        +String email
        +Boolean emailVerified
        +String image
        +Role role
        +Boolean isOnboarded
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Session {
        +String id
        +DateTime expiresAt
        +String token
        +String userId
        +String ipAddress
        +String userAgent
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Account {
        +String id
        +String accountId
        +String providerId
        +String userId
        +String accessToken
        +String refreshToken
        +String idToken
        +DateTime accessTokenExpiresAt
        +DateTime refreshTokenExpiresAt
        +String scope
        +String password
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Candidate {
        +String id
        +String userId
        +String title
        +String bio
        +String phone
        +String location
        +String experience
        +CandidateStatus status
        +int employabilityScore
        +String githubUrl
        +String linkedinUrl
        +String portfolioUrl
        +String cvPath
    }

    class Recruiter {
        +String id
        +String userId
        +String companyName
        +String website
        +String industry
        +String teamSize
        +String headquarters
        +String description
    }

    class JobOffer {
        +String id
        +String recruiterId
        +String title
        +String description
        +String contractType
        +String locationType
        +String salary
        +int experienceYears
        +String location
        +JobStatus status
        +DateTime createdAt
    }

    class Skill {
        +String id
        +String name
    }

    class Application {
        +String id
        +String candidateId
        +String jobOfferId
        +ApplicationStatus status
        +int matchScore
        +String matchExplanation
        +DateTime appliedDate
    }

    class Quiz {
        +String id
        +String jobOfferId
        +String title
        +String skillTarget
        +QuizStatus status
        +DateTime createdAt
    }

    class Question {
        +String id
        +String quizId
        +String text
        +Json options
        +int correctAnswer
    }

    class TestResult {
        +String id
        +String candidateId
        +String quizId
        +int score
        +Boolean passed
        +DateTime completedAt
    }

    %% ==========================================================
    %% 🟩 SECTION 3: MONGODB DATABASE (DYNAMIC AI DATA)
    %% ==========================================================
    class ParsedCV {
        +ObjectId _id
        +String userId
        +String rawCvText
        +Json aiParsedData
    }

    class GitHubData {
        +ObjectId _id
        +String userId
        +Array repositories
        +int totalStars
    }

    class PortfolioData {
        +ObjectId _id
        +String userId
        +String portfolioUrl
        +Array projects
        +Array extractedSkills
    }

    %% ==========================================================
    %% ⛓️ SECTION 4: RELATIONSHIPS & CARDINALITIES
    %% ==========================================================
    
    %% Enum Bindings
    User ..> Role : "enforces"
    JobOffer ..> JobStatus : "tracks"
    Application ..> ApplicationStatus : "evaluates"
    Quiz ..> QuizStatus : "tracks"
    Candidate ..> CandidateStatus : "indicates"

    %% MySQL Internal Relations
    User "1" --> "*" Session : "has"
    User "1" --> "*" Account : "has"
    User "1" --> "0..1" Candidate : "extends profile"
    User "1" --> "0..1" Recruiter : "extends profile"

    Recruiter "1" --> "*" JobOffer : "publishes"
    Candidate "1" --> "*" Application : "submits"
    JobOffer "1" --> "*" Application : "receives"

    Candidate "*" --> "*" Skill : "masters"
    JobOffer "*" --> "*" Skill : "demands"

    JobOffer "1" --> "0..1" Quiz : "triggers automated"
    Quiz "1" --> "*" Question : "composes"
    Quiz "1" --> "*" TestResult : "records"
    Candidate "1" --> "*" TestResult : "completes"

    %% Cross-Database Logical Pointers (Mapped in Backend via userId)
    User "1" ..> "0..1" ParsedCV : "Cross-DB mapping via userId"
    User "1" ..> "0..1" GitHubData : "Cross-DB mapping via userId"
    User "1" ..> "0..1" PortfolioData : "Cross-DB mapping via userId"